Fix spacing on header items

--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ li {
 
 #left-toolbar {
     grid-area: 1 / 1 / 3 / 3;
-    justify-content: center;
+    justify-content: start;
+    margin-left: 55px;
     align-content: center;
     display: flex;
     align-items: center;
@@ -110,6 +111,7 @@ input {
     align-content: center;
     gap: 20px;
     align-items: center;
+    margin-right: 50px;
 }
 
 #user-info {
@@ -120,15 +122,20 @@ input {
 }
 
 #left-user-info {
-    grid-area: 2 / 1 / 3 / 2;
-    display: grid;
-    grid-template-columns: .25fr .75fr;
+    display: flex;
+    gap: 15px;
+    align-content: center;
+    align-items: center;
+    justify-items: center;
+    justify-content: start;
+    margin-left: 55px;
 }
 
 #buttons {
-    grid-area: 2 / 2 / 3 / 3;
-    justify-self: center;
-    align-self: center;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-right: 50px;
 }
 
 button {
@@ -238,5 +245,5 @@ a {
 }
 
 .large-icon {
-    width: 80%;
+    width: 70px;
 }
